Fixed appearance of track tab on tablet

--- a/src/Cadenza/Cadenza/wwwroot/css/layout.scss
+++ b/src/Cadenza/Cadenza/wwwroot/css/layout.scss
@@ -71,11 +71,16 @@ div.tab-grid {
     overflow-y: auto;
 }
 
+@media (min-width: #{$screen-sm-min}) {
+    div.tab-grid {
+        padding: 0.5rem;
+    }
+}
+
 @media (min-width: #{$screen-md-min}) {
     div.tab-grid {
         max-height: 100%;
         overflow-y: hidden;
-        padding: 0.5rem;
     }
 }
 
@@ -87,12 +92,17 @@ div.tab-grid-col {
     overflow-y: auto;
 }
 
+@media (min-width: #{$screen-sm-min}) {
+    div.tab-grid-col {
+        padding: 0 0.5rem;
+    }
+}
+
 @media (min-width: #{$screen-md-min}) {
     div.tab-grid-col {
         height: 100%;
         max-height: 100%;
         overflow-y: hidden;
-        padding: 0 0.5rem;
     }
 }
 
